--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,8 +1,7 @@
 .header {
   width: 100vw;
-  background-color: rgb(250, 246, 34);
+  background-color: $base-color;
   font-size: 36px;
-  color: $font-color;
   box-shadow: $box-shadow;
 }
 
