--- a/src/scss/constants.scss
+++ b/src/scss/constants.scss
@@ -1,3 +1,5 @@
+$base-color: rgb(250, 247, 48);
 $box-shadow: 0px 0px 5px #dbdbdbda;
 $font-color: #3f3e3e;
 $font-color-placeholder: #dadada;
+$border-color: #e4e4e4;
