--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,6 @@
 // Add car modal
 @import "./add-car-modal.scss";
 @import "./icon-close.scss";
+
+// Actions panel 
+@import "./actions-panel.scss";
