--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,9 +1,11 @@
 .button {
   width: 120px;
-  height: 35px;
+  height: 40px;
+  color: inherit;
+  font-weight: 700;
   background-color: #ffffff;
   border: 2px solid $base-color;
-  border-radius: 2px;
+  border-radius: 4px;
   cursor: pointer;
 
   &:hover {
