--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -6,3 +6,28 @@ body {
 .main {
   padding: 30px;
 }
+
+.input {
+  width: 350px;
+  height: 36px;
+}
+
+.select {
+  width: 372px;
+  height: 40px;
+}
+
+.input,
+.select {
+  margin-bottom: 15px;
+  border: 1px solid $border-color;
+  border-radius: 4px;
+  outline: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  
+
+  &::placeholder {
+    color: $font-color-placeholder;
+  }
+}
