--- a/src/scss/constants.scss
+++ b/src/scss/constants.scss
@@ -3,3 +3,5 @@ $box-shadow: 0px 0px 5px #dbdbdbda;
 $font-color: #3f3e3e;
 $font-color-placeholder: #dadada;
 $border-color: #e4e4e4;
+$tablet-small-width: 768px;
+$mobile-big-width: 480px;
