--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 // Common
 @import "./constants.scss";
+@import "./mixins.scss";
 @import "./base.scss";
 @import "./loader.scss";
 @import "./button.scss";
